admin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-admin-service
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 30004
      targetPort: 8000
  type: ClusterIP
